# dav-dbms

./: .gitignore  Makefile  Makefile.in  README  Vagrantfile  changelog.txt  configure.ac  create_dbm.sql  create_indices.sql  facts.c  facts.h  install_funcs.sql  install_funcs.sql.in  trigger-cleanup
SQL/: create_dbm.sql  create_dbm.sql.in  create_indices.sql  install_funcs.sql.in
debian/: changelog  cms-backend.cron.daily  cms-backend.default  cms-backend.install  control  copyright  docs  files  rules
